--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,420 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive flower website design tutorial</title>
-</head>
-<body>
-
-<!-- header section starts  -->
-
-<header>
-
-    <input type="checkbox" name="" id="toggler">
-    <label for="toggler" class="fas ven-163-f-317_1248__il4qohqbp9hvpehe_c5401852-705d-48c4-aeff-0afcdb3e1437_400x"></label>
-
-    <a href="#" class="logo">flower<span>.</span></a>
-
-    <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#about">about</a>
-        <a href="#products">products</a>
-        <a href="#review">review</a>
-        <a href="#contact">contact</a>
-    </nav>
-
-    <div class="icons">
-        <a href="#" class="fas fa-heart"></a>
-        <a href="#" class="fas fa-shopping cart"></a>
-        <a href="#" class="fas fa-users"></a>
-    </div>
-
-</header>
-
-<!-- header section ends -->
-
-<!-- home section starts  -->
-
-<section class="home" id="home">
-
-    <div class="content">
-        <h3>fresh flowers</h3>
-        <span> natural & beautiful flowers </span>
-        <p>“If you look the right way, you can see that the whole world is a garden.”</p>
-        <a href="#" class="btn">shop now</a>
-    </div>
-    
-</section>
-
-<!-- home section ends -->
-
-<!-- about section starts  -->
-
-<section class="about" id="about">
-
-    <h1 class="heading"> <span> about </span> us </h1>
-
-    <div class="row">
-
-        <div class="image-container">
-            <img src="4c58ccdadd89cdcc5f9f10d06cca5a81.gif" alt="">
-            <h3>best flower sellers</h3>
-        </div>
-
-        <div class="content">
-            <h3>why choose us?</h3>
-            <p></p>
-            <a href="#" class="btn">learn more</a>
-        </div>
-
-    </div>
-
-</section>
-
-<!-- about section ends -->
-
-<!-- icons section starts  -->
-
-<section class="icons-container">
-
-    <div class="icons">
-        <img src="https://m.media-amazon.com/images/I/41yoAR-OhqL.jpg" alt="">
-        <div class="info">
-            <h3>free delivery</h3>
-            <span>on all orders</span>
-        </div>
-    </div>
-
-    <div class="icons">
-        <img src="https://i1.fnp.com/images/pr/l/v20220706181822/pretty-in-pastel-roses-bouquet_1.jpg" alt="">
-        <div class="info">
-            <h3>10 days returns</h3>
-            <span>moneyback guarantee</span>
-        </div>
-    </div>
-
-    <div class="icons">
-        <img src="https://www.oyegifts.com/flowers-n-gifts/vendordata/product/gifts-online-120.jpg" alt="">
-        <div class="info">
-            <h3>offer & gifts</h3>
-            <span>on all orders</span>
-        </div>
-    </div>
-
-    <div class="icons">
-        <img src="https://indianflowercakengifts.com/product-images/1494069301-25-White-n-Pink-Roses-Midnight-Online-Delivery.jpg" alt="">
-        <div class="info">
-            <h3>secure paymens</h3>
-            <span>protected by paypal</span>
-        </div>
-    </div>
-   
-</section>
-
-<!-- icons section ends -->
-
-<!-- prodcuts section starts  -->
-
-<section class="products" id="products">
-
-    <h1 class="heading"> latest <span>products</span> </h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <span class="discount">-10%</span>
-            <div class="image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrVht0PWBcyaZdZQQkBMgHbNjifhZAVOHOqw&usqp=CAU" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <span class="discount">-15%</span>
-            <div class="image">
-                <img src="https://cdn.nikkiflower.com/assets/uploads/product_image/1357/small/1613047518_0.jpg" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <span class="discount">-5%</span>
-            <div class="image">
-                <img src="https://content.jdmagicbox.com/comp/surat/g4/0261px261.x261.130103152209.f9g4/catalogue/devmali-fresh-flowers-katargam-surat-ffxdh-250.jpg?clr=" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <span class="discount">-20%</span>
-            <div class="image">
-                <img src="https://cdn.shopify.com/s/files/1/0549/8421/2633/products/ven-163-f-317_1248__il4qohqbp9hvpehe_c5401852-705d-48c4-aeff-0afcdb3e1437_400x.jpg?v=1616429620" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <span class="discount">-17%</span>
-            <div class="image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTobfbl-l2xOPv4ZGsHKAcJZomgCCT1ctDEpA&usqp=CAU" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <span class="discount">-3%</span>
-            <div class="image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0IBw9m9LnJ37ItOJC6hZEeEMcgdxlQnzUXqmSuSSmMHJnKB_Zz46FN-tkCzjJI_HWUso&usqp=CAU" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <span class="discount">-18%</span>
-            <div class="image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpZ7it-U_sg2WmX0YsmDvRlRrEjte_OTkZvQ&usqp=CAU" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <span class="discount">-10%</span>
-            <div class="image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbbdbkcMq6wFNWXaBC629OUW07VutXsf59Qg&usqp=CAU" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-        <div class="box">
-            <span class="discount">-5%</span>
-            <div class="image">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIO4rbNMxsqPNeHAJOGO9dE38qY8aADAbXyw&usqp=CAU" alt="">
-                <div class="icons">
-                    <a href="#" class="fas fa-heart">♡</a>
-                    <a href="#" class="cart-btn">add to cart</a>
-                    <a href="#" class="fas fa-share">➥</a>
-                </div>
-            </div>
-            <div class="content">
-                <h3>flower pot</h3>
-                <div class="price"> $12.99 <span>$15.99</span> </div>
-            </div>
-        </div>
-
-    </div>
-
-</section>
-
-<!-- prodcuts section ends -->
-
-<!-- review section starts  -->
-
-<section class="review" id="review">
-
-<h1 class="heading"> customer's <span>review</span> </h1>
-
-<div class="box-container">
-
-    <div class="box">
-        <div class="stars">
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-        </div>
-        <p>FlowerShopping Has A Consumer Rating Of 4.68 Stars From 148,964 Reviews Indicating That Most Customers Are Generally Satisfied With Their Purchases. Consumers Satisfied With FlowerShopping Most Frequently Mention Day Delivery, Great Selection And Funeral Home. FlowerShopping Ranks 2nd Among Flower Delivery Sites.</p>
-        <div class="user">
-            <img src="https://www.fnp.com/images/pr/l/v20220706181849/young-love-colourful-bouquet_1.jpg" alt="">
-            <div class="user-info">
-                <h3>Dolly</h3>
-                <span>happy customer</span>
-            </div>
-        </div>
-        <span class="fas fa-quote-right"></span>
-    </div>
-
-    <div class="box">
-        <div class="stars">
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-        </div>
-        <p>FlowerShopping Has A Consumer Rating Of 4.68 Stars From 148,964 Reviews Indicating That Most Customers Are Generally Satisfied With Their Purchases. Consumers Satisfied With FlowerShopping Most Frequently Mention Day Delivery, Great Selection And Funeral Home. FlowerShopping Ranks 2nd Among Flower Delivery Sites..</p>
-        <div class="user">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEpwhdinI1vxC-DOzYzxLVcsqNUJ3I6XSiRKoSOZNCxODYeZOlIC0S4teKG5GgThXYCDc&usqp=CAU" alt="">
-            <div class="user-info">
-                <h3>Harry</h3>
-                <span>happy customer</span>
-            </div>
-        </div>
-        <span class="fas fa-quote-right">"</span>
-    </div>
-
-    <div class="box">
-        <div class="stars">
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-            <i class="fas fa-star">✩</i>
-        </div>
-        <p>FlowerShopping Has A Consumer Rating Of 4.68 Stars From 148,964 Reviews Indicating That Most Customers Are Generally Satisfied With Their Purchases. Consumers Satisfied With FlowerShopping Most Frequently Mention Day Delivery, Great Selection And Funeral Home. FlowerShopping Ranks 2nd Among Flower Delivery Sites.</p>
-        <div class="user">
-            <img src="https://cdn.store-assets.com/s/239625/i/44242488.jpg?width=480" alt="">
-            <div class="user-info">
-                <h3>Dany</h3>
-                <span>happy customer</span>
-            </div>
-        </div>
-        <span class="fas fa-quote-right">"</span>
-    </div>
-
-</div>
-    
-</section>
-
-<!-- review section ends -->
-
-<!-- contact section starts  -->
-
-<section class="contact" id="contact">
-
-    <h1 class="heading"> <span> contact </span> us </h1>
-
-    <div class="row">
-
-        <form action="">
-            <input type="text" placeholder="name" class="box">
-            <input type="email" placeholder="email" class="box">
-            <input type="number" placeholder="number" class="box">
-            <textarea name="" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
-            <input type="submit" value="send message" class="btn">
-        </form>
-
-        <div class="image">
-            <img src="https://i.pinimg.com/736x/b0/26/fd/b026fd519337a1dc0c227081234da563--red-lily-hand-bouquet.jpg" alt="">
-        </div>
-
-    </div>
-
-</section>
-
-<!-- contact section ends -->
-
-<!-- footer section starts  -->
-
-<section class="footer">
-
-    <div class="box-container">
-
-        <div class="box">
-            <h3>quick links</h3>
-            <a href="#">home</a>
-            <a href="#">about</a>
-            <a href="#">products</a>
-            <a href="#">review</a>
-            <a href="#">contact</a>
-        </div>
-
-        <div class="box">
-            <h3>extra links</h3>
-            <a href="#">my account</a>
-            <a href="#">my order</a>
-            <a href="#">my favorite</a>
-        </div>
-
-        <div class="box">
-            <h3>locations</h3>
-            <a href="#">india</a>
-            <a href="#">USA</a>
-            <a href="#">japan</a>
-            <a href="#">france</a>
-        </div>
-
-
-        <div class="box">
-            <h3>contact info</h3>
-            <a href="#">628148854</a>
-            <a href="#">amruthaswarupa286@gmail.com</a>
-            <a href="#">vijayawada, india - 400104</a>
-            <img src="https://www.fnp.com/images/pr/l/oriental-lilies-carnations-mixed-bouquet_1.jpg" alt="">
-        </div>
-
-    </div>
-
-    <div class="credit"> created by <span>D Amrutha swarupa </span> | all rights reserved </div>
-
-</section>
-
-<!-- footer section ends -->    
-</body>
-</html>
+<nav>
+    <a routerlink="home">home</a>
+    <a routerlink="about">about</a>
+    <a routerLink="product">product</a>
+    <a routerLink="review">review</a>
+    <a routerLink="contact">contact</a>
+</nav>
+<router-outlet></router-outlet>
