--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
+
 <nav>
-    <a routerlink="home">home</a>
-    <a routerlink="about">about</a>
-    <a routerLink="product">product</a>
-    <a routerLink="review">review</a>
-    <a routerLink="contact">contact</a>
+    <a routerLink="/home"> Home</a> 
+    <a routerLink="/about">About</a>
+    <a routerLink="/product">product</a> 
+    <a routerLink="/review">review</a>
+    <a routerLink="/contact">contact</a> 
 </nav>
 <router-outlet></router-outlet>
